--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,5 @@
-RewriteEngine On
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^([^\.]+)$ $1.html [NC,L]
+RewriteEngine on
+
+RewriteCond %{THE_REQUEST} \/index\.(php|html)\ HTTP [NC]
+
+RewriteRule (.*)index\.(php|html)$ /$1 [R=301,L]
